--- a/estilo.css
+++ b/estilo.css
@@ -621,4 +621,7 @@
                 width: 100%;
                 margin-bottom: 15px;
             }
+                .redes{
+                display: block;
+            }
         }
